--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
 
     <ul>
-        <li>I graduated feom Ashbal masr </li>
+        <li>I graduated from Ashbal masr </li>
     </ul>
     <hr>
     <h2>Others</h2>
